Fixed a bug where tags wouldn't wrap on smaller screens.

--- a/src/styles/info-item.css
+++ b/src/styles/info-item.css
@@ -14,4 +14,6 @@
     margin-right: 5px;
     text-transform: lowercase;
     font-size: 12px;
+    display: inline-block;
+    margin-bottom: 10px;
 }
