--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -13,6 +13,3 @@
         lost-column: 1/3;
     }
 }
-
-.skills__item {
-}
